@@ -48,6 +48,7 @@ my $PRINT_HELP;
 my $OUTPUT_ALL_SYMBOLS;
 my $MAIN_SGML_FILE;
 my $SGML_MODE;
+my $DEFAULT_STABILITY;
 my $OUTPUT_FORMAT;
 
 my %optctl = (module => \$MODULE,
@@ -60,8 +61,9 @@ my %optctl = (module => \$MODULE,
 	      'main-sgml-file' => \$MAIN_SGML_FILE,
 	      'outputallsymbols' => \$OUTPUT_ALL_SYMBOLS,
 	      'sgml-mode' => \$SGML_MODE,
+	      'default-stability' => \$DEFAULT_STABILITY,
 	      'output-format' => \$OUTPUT_FORMAT);
-GetOptions(\%optctl, "module=s", "source-dir:s", "ignore-files:s", "output-dir:s", "tmpl-dir:s", "version", "outputallsymbols", "main-sgml-file:s", "help", "sgml-mode", "output-format:s");
+GetOptions(\%optctl, "module=s", "source-dir:s", "ignore-files:s", "output-dir:s", "tmpl-dir:s", "version", "outputallsymbols", "main-sgml-file:s", "help", "sgml-mode", "default-stability:s", "output-format:s");
 
 if ($PRINT_VERSION) {
     print "@VERSION@\n";
@@ -69,6 +71,11 @@ if ($PRINT_VERSION) {
 }
 
 if (!$MODULE) {
+    $PRINT_HELP = 1;
+}
+
+if ($DEFAULT_STABILITY && $DEFAULT_STABILITY ne "Stable"
+    && $DEFAULT_STABILITY ne "Private" && $DEFAULT_STABILITY ne "Unstable") {
     $PRINT_HELP = 1;
 }
 
@@ -83,6 +90,8 @@ if ($PRINT_HELP) {
     print "\n--main-sgml-file=FILE  File containing the toplevel SGML file.";
     print "\n--output-format=FORMAT The format to use for the generated docbook, XML or SGML.";
     print "\n--sgml-mode            Allow Docbook markup in inline documentation.";
+    print "\n--default-stability=LEVEL Specify default stability Level. Valid values are";
+    print "\n                       Stable, Unstable, or Private.";
     print "\n--version              Print the version of this program";
     print "\n--help                 Print this help\n";
     exit 0;
@@ -171,6 +180,7 @@ my %DeclarationConditional;
 my %DeclarationOutput;
 my %Deprecated;
 my %Since;
+my %StabilityLevel;
 my %StructHasTypedef;
 
 # These global hashes store the existing documentation.
@@ -759,6 +769,9 @@ sub OutputMacro {
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
     }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
+    }
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
 }
@@ -792,6 +805,9 @@ sub OutputTypedef {
     }
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
+    }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
     }
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
@@ -962,6 +978,9 @@ EOF
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
     }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
+    }
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
 }
@@ -1033,6 +1052,9 @@ EOF
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
     }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
+    }
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
 }
@@ -1063,6 +1085,9 @@ sub OutputUnion {
     }
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
+    }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
     }
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
@@ -1105,6 +1130,9 @@ sub OutputVariable {
     }
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
+    }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
     }
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
@@ -1293,6 +1321,10 @@ sub OutputFunction {
     if (exists $Since{$symbol}) {
 	$desc .= "<para>Since $Since{$symbol}</para>";
     }
+    if (exists $StabilityLevel{$symbol}) {
+	$desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
+    }
+
     $desc .= "</refsect2>\n";
     return ($synop, $desc);
 }
@@ -1359,6 +1391,38 @@ EOF
 
 
 #############################################################################
+# Function    : ParseStabilityLevel
+# Description : Parses a stability level and outputs a warning if it isn't
+#               valid.
+# Arguments   : $stability - the stability text.
+#		$message - description of where the level is from, to use in
+#               any error message.
+# Returns     : The parsed stability level string.
+#############################################################################
+
+sub ParseStabilityLevel {
+    my ($stability, $message) = @_;
+
+    $stability =~ s/^\s*//;
+    $stability =~ s/\s*$//;
+    if ($stability =~ m/^stable$/i) {
+        $stability = "Stable";
+    } elsif ($stability =~ m/^unstable$/i) {
+        $stability = "Unstable";
+    } elsif ($stability =~ m/^private$/i) {
+        $stability = "Private";
+    } else {
+        $stability = "";
+	print <<EOF;
+WARNING: $message is $stability.
+It should be one of these: Stable, Unstable, or Private.
+EOF
+    }
+    return $stability;
+}
+
+
+#############################################################################
 # Function    : OutputSGMLFile
 # Description : Outputs the final DocBook file for one section.
 # Arguments   : $file - the name of the file.
@@ -1415,6 +1479,18 @@ sub OutputSGMLFile {
     if ($see_also) {
 	$see_also = "<refsect1>\n<title>See Also</title>\n$see_also\n</refsect1>\n";
     }
+    my $stability = $SymbolDocs{"$TMPL_DIR/$file:Stability_Level"};
+    if (!defined ($stability) || $stability =~ m/^\s*$/) {
+	$stability = "";
+    } else {
+        $stability = &ParseStabilityLevel($stability, "Section stability level for $file");
+#	print "Found stability: $stability";
+    }
+    if ($stability) {
+	$stability = "<refsect1>\n<title>Stability Level</title>\n$stability, unless otherwise indicated\n</refsect1>\n";
+    } elsif ($DEFAULT_STABILITY) {
+	$stability = "<refsect1>\n<title>Stability Level</title>\n$DEFAULT_STABILITY, unless otherwise indicated\n</refsect1>\n";
+    }
 
     my ($sec, $min, $hour, $mday, $mon, $year, $wday, $yday, $isdst) =
 	gmtime (time);
@@ -1468,7 +1544,7 @@ sub OutputSGMLFile {
 <refnamediv>
 <refname>$title</refname><refpurpose>$short_desc</refpurpose>
 </refnamediv>
-
+$stability
 <refsynopsisdiv><title>Synopsis</title>
 $object_anchors
 <synopsis>
@@ -1746,9 +1822,15 @@ sub MakeDeprecationNote {
     my $note = "";
     if (exists $Deprecated{$symbol}) {
 	$desc .= "<warning>";
-	$desc .= "<para><literal>$symbol</literal> is deprecated and should not be used in newly-written code.";
+
+	if ($Deprecated{$symbol} =~ /^\s*([0-9\.]+)\s*:/) {
+		$desc .= "<para><literal>$symbol</literal> has been deprecated since version $1 should not be used in newly-written code.";
+        } else {
+		$desc .= "<para><literal>$symbol</literal> is deprecated and should not be used in newly-written code.";
+	}
 	if ($Deprecated{$symbol} ne "") {
 	    $note = &ExpandAbbreviations($Deprecated{$symbol});
+	    $note =~ s/^\s*([0-9\.]+)\s*:\s*//;
 	    $note =~ s/^\s+//;
 	    $note =~ s/\s+$//;
 	    $note =~ s%\n{2,}%\n</para>\n<para>\n%g;
@@ -2107,6 +2189,9 @@ sub GetSignals {
 	    if (exists $Since{$symbol}) {
 	      $desc .= "<para>Since $Since{$symbol}</para>";
 	    }
+	    if (exists $StabilityLevel{$symbol}) {
+	      $desc .= "<para>Stability Level: $StabilityLevel{$symbol}</para>";
+	    }
 	    $desc .= "</refsect2>";
 	}
     }
@@ -2218,6 +2303,9 @@ sub GetArgs {
 	    if (exists $Since{$symbol}) {
 	      $arg_desc .= "<para>Since $Since{$symbol}</para>\n";
 	    }
+	    if (exists $StabilityLevel{$symbol}) {
+	      $arg_desc .= "<para>Stability Level $StabilityLevel{$symbol}</para>\n";
+	    }
 	    $arg_desc .= "</refsect2>\n";
 
 	    if ($flags =~ m/c/) {
@@ -2252,7 +2340,7 @@ sub GetArgs {
 #		blocks.
 #
 # Arguments   : $source_dir - the directory to scan.
-#############################################################################
+#############m###############################################################
 
 sub ReadSourceDocumentation {
     my ($source_dir) = @_;
@@ -2314,8 +2402,8 @@ sub ScanSourceFile {
 	|| die "Can't open $file: $!";
     my $in_comment_block = 0;
     my $symbol;
-    my ($in_description, $in_return, $in_since, $in_deprecated);
-    my ($description, $return_desc, $return_start, $since_desc, $deprecated_desc);
+    my ($in_description, $in_return, $in_since, $in_stability, $in_deprecated);
+    my ($description, $return_desc, $return_start, $since_desc, $stability_desc, $deprecated_desc);
     my $current_param;
     my $ignore_returns;
     my @params;
@@ -2338,6 +2426,8 @@ sub ScanSourceFile {
 		$description = "";
 		$return_desc = "";
 		$since_desc = "";
+		$stability_desc = "";
+		$in_stability = 0;
 		$deprecated_desc = "";
 		$current_param = -1;
 		$ignore_returns = 0;
@@ -2371,6 +2461,11 @@ EOF
 
 		if ($since_desc) {
 		    $Since{$symbol} = &ConvertSGMLChars ($since_desc);
+		}
+
+		if ($stability_desc) {
+		    $stability_desc = &ParseStabilityLevel($stability_desc, "Stability level for $symbol");
+		    $StabilityLevel{$symbol} = &ConvertSGMLChars ($stability_desc);
 		}
 
 		if ($deprecated_desc) {
@@ -2418,6 +2513,10 @@ EOF
 		$since_desc = $';
 		$in_since = 1;
 		$in_return = 0;
+	    } elsif (m%^\s*stability:%i) {
+		$stability_desc = $';
+		$in_stability = 1;
+		$in_return = 0;
 	    } elsif (m%^\s*deprecated:%i) {
 		$deprecated_desc = $';
 		$in_deprecated = 1;
@@ -2439,8 +2538,33 @@ EOF
 		$deprecated_desc = $';
 		$in_deprecated = 1;
 		$in_since = 0;
+	    } elsif (m%^\s*stability:%i) {
+		$stability_desc = $';
+		$in_stability = 1;
+		$in_since = 0;
 	    } else {
 		$since_desc .= $_;
+	    }
+	    next;
+	}
+
+	if ($in_stability) {
+	    if (m%^\s*(returns:|return\s+value:|returns\s*)%i) {
+		$description .= $return_start . $return_desc;
+		$return_start = $1;
+		$return_desc = $';
+		$in_return = 1;
+		$in_stability = 0;
+	    } elsif (m%^\s*deprecated:%i) {
+		$deprecated_desc = $';
+		$in_deprecated = 1;
+		$in_stability = 0;
+	    } elsif (m%^\s*since:%i) {
+		$since_desc = $';
+		$in_since = 1;
+		$in_stability = 0;
+	    } else {
+		$stability_desc .= $_;
 	    }
 	    next;
 	}
@@ -2455,6 +2579,10 @@ EOF
 	    } elsif (m%^\s*since:%i) {
 		$since_desc = $';
 		$in_since = 1;
+		$in_deprecated = 0;
+	    } elsif (m%^\s*stability:%i) {
+		$stability_desc = $';
+		$in_stability = 1;
 		$in_deprecated = 0;
 	    } else {
 		$deprecated_desc .= $_;
@@ -2482,6 +2610,10 @@ EOF
 	    elsif (m%^\s*deprecated:%i) {
 		$deprecated_desc = $';
 		$in_deprecated = 1;
+		next;
+	    } elsif (m%^\s*stability:%i) {
+		$stability_desc = $';
+		$in_stability = 1;
 		next;
 	    }
 
@@ -2548,7 +2680,7 @@ sub OutputMissingDocumentation {
           || die "Can't create $ROOT_DIR/$MODULE-undocumented.txt";
 
      foreach $symbol (sort (keys (%AllSymbols))) {
-          if ($symbol !~ /:(Title|Long_Description|Short_Description|See_Also)/) {
+          if ($symbol !~ /:(Title|Long_Description|Short_Description|See_Also|Stability_Level)/) {
 	      $total++;
               if (exists ($AllDocumentedSymbols{$symbol})) {
 		  $n_documented++;
@@ -3059,6 +3191,9 @@ sub ReadTemplateFile {
 				#   Note that the param array contains pairs
 				#   of param name & description.
     my $in_unused_params = 0;	# True if we are reading in the unused params.
+    my $in_deprecated = 0;
+    my $in_since = 0;
+    my $in_stability = 0;
 
     open (DOCS, "$template")
 	|| die "Can't open file $template: $!";
@@ -3069,9 +3204,12 @@ sub ReadTemplateFile {
 	    if ($symbol eq "Title"
 		|| $symbol eq "Short_Description"
 		|| $symbol eq "Long_Description"
-		|| $symbol eq "See_Also") {
+		|| $symbol eq "See_Also"
+		|| $symbol eq "Stability_Level") {
+
 		$symbol = $docsfile . ":" . $symbol;
 	    }
+
 #	    print "Found symbol: $symbol\n";
 
 	    # Store previous symbol, but remove any trailing blank lines.
@@ -3079,31 +3217,14 @@ sub ReadTemplateFile {
 		$symbol_doc =~ s/\s+$//;
 		$SymbolTypes{$current_symbol} = $current_type;
 		$SymbolDocs{$current_symbol} = $symbol_doc;
+
+		# Check that the stability level is valid.
+		if ($StabilityLevel{$current_symbol}) {
+		    $StabilityLevel{$current_symbol} = &ParseStabilityLevel($StabilityLevel{$current_symbol}, "Stability level for $current_symbol");
+		}
+
 		if ($current_param >= 0) {
-		    if ($current_param > 0) {
-			if ($params[$current_param - 1] eq "Deprecated") {
-			    $Deprecated{$current_symbol} = pop (@params);
-			    pop (@params);
-			    $current_param -= 2;
-			}
-		    }
-		    if ($current_param > 0) {
-			if ($params[$current_param - 1] eq "Since") {
-			    $Since{$current_symbol} = pop (@params);
-			    pop (@params);
-			    $current_param -= 2;
-			}
-		    }
-		    # look for deprecated again to support both orders
-		    if ($current_param > 0) {
-			if ($params[$current_param - 1] eq "Deprecated") {
-			    $Deprecated{$current_symbol} = pop (@params);
-			    pop (@params);
-			    $current_param -= 2;
-			}
-		    }
 		    $SymbolParams{$current_symbol} = [ @params ];
-                    #print "#### Found params for symbol : '$current_symbol'= " . @params . "\n";
 		} else {
 		    # Delete any existing params in case we are overriding a
 		    # previously read template.
@@ -3114,6 +3235,9 @@ sub ReadTemplateFile {
 	    $current_symbol = $symbol;
 	    $current_param = -1;
 	    $in_unused_params = 0;
+	    $in_deprecated = 0;
+	    $in_since = 0;
+	    $in_stability = 0;
 	    $symbol_doc = "";
 	    @params = ();
 
@@ -3136,49 +3260,54 @@ sub ReadTemplateFile {
 		    $param_name = "Returns";
 		}
 #               print "Found param for symbol $current_symbol : '$param_name'= '$_'\n";
-		push (@params, $param_name);
-		push (@params, $_);
-		$current_param += 2;
-		next;
-	    }
 
-	    if ($current_param >= 0) {
-		$params[$current_param] .= $_;
+		if ($param_name eq "Deprecated") {
+		    $in_deprecated = 1;
+		    $Deprecated{$current_symbol} = $_;
+		} elsif ($param_name eq "Since") {
+		    $in_since = 1;
+		    $Since{$current_symbol} = $_;
+		} elsif ($param_name eq "Stability") {
+		    $in_stability = 1;
+		    $StabilityLevel{$current_symbol} = $_;
+		} else {
+		    push (@params, $param_name);
+		    push (@params, $_);
+		    $current_param += 2;
+		}
 	    } else {
-		$symbol_doc .= $_;
+	        if ($in_deprecated) {
+		    $Deprecated{$current_symbol} .= $_;
+		} elsif ($in_since) {
+		    $Since{$current_symbol} .= $_;
+		} elsif ($in_stability) {
+		    $StabilityLevel{$current_symbol} .= $_;
+		} elsif ($current_param >= 0) {
+		    $params[$current_param] .= $_;
+		} else {
+		    $symbol_doc .= $_;
+		}
 	    }
 	}
     }
 
     # Remember to finish the current symbol doccs.
     if ($current_symbol ne "") {
+
 	$symbol_doc =~ s/\s+$//;
 	$SymbolTypes{$current_symbol} = $current_type;
 	$SymbolDocs{$current_symbol} = $symbol_doc;
+
+	# Check that the stability level is valid.
+	if ($StabilityLevel{$current_symbol}) {
+	    $StabilityLevel{$current_symbol} = &ParseStabilityLevel($StabilityLevel{$current_symbol}, "Stability level for $current_symbol");
+	}
+
 	if ($current_param >= 0) {
-	    if ($current_param > 0) {
-		if ($params[$current_param - 1] eq "Deprecated") {
-		    $Deprecated{$current_symbol} = pop (@params);
-		    pop (@params);
-		    $current_param -= 2;
-		}
-	    }
-	    if ($current_param > 0) {
-		if ($params[$current_param - 1] eq "Since") {
-		    $Since{$current_symbol} = pop (@params);
-		    pop (@params);
-		    $current_param -= 2;
-		}
-	    }
-	    if ($current_param > 0) {
-		if ($params[$current_param - 1] eq "Deprecated") {
-		    $Deprecated{$current_symbol} = pop (@params);
-		    pop (@params);
-		    $current_param -= 2;
-		}
-	    }
 	    $SymbolParams{$current_symbol} = [ @params ];
 	} else {
+	    # Delete any existing params in case we are overriding a
+	    # previously read template.
 	    delete $SymbolParams{$current_symbol};
 	}
     }
