@@ -1,5 +1,9 @@
 2005-02-01  Damon Chaplin  <damon@gnome.org>
 
+	* gtkdoc-mkdb.in: 
+	* gtkdoc-mktmpl.in: patch from Brian Cameron to support stability
+	levels.
+
 	* gtkdoc-mkdb.in (OutputFunction): 
 	* gtkdoc-mktmpl.in (OutputDeclaration): 
 	* gtkdoc-common.pl.in (ParseStructDeclaration): patch from Roger Leigh
